--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project 1</title>
+    <link rel="stylesheet" href="./assets/style/style.css">
+    <title>Travel Almanac</title>
 </head>
 
 <body>
-    <div class="container">
-        <div class="row"></div>
-    </div>
+
+    <script src="./assets/js/script.js"></script>
 </body>
 
 </html>
