--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
         </div>
     </nav>
 
-    <div class="container"></div>
+    <div class="container">
+        <div class="row"></div>
+    </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="./assets/js/script.js"></script>
