UPDATE: muted fetch req; emptied broken image link

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="col s12 m7">
                 <div class="card" style="margin-top: 40px">
                     <div class="card-image">
-                        <img src="images/sample-1.jpg" id="natFlag">
+                        <img src="" id="natFlag">
                         <span class="card-title black-text" id="countryName">Card Title</span>
                     </div>
                     <div class="card-content">
