--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
     <div class="container">
         <div class="row">
             <div class="col s12 m7">
-                <div class="card" style="margin-top: 60px">
+                <div class="card" style="margin-top: 60px" id="country-data">
                     <div class="card-image">
-                        <img src="" id="natFlag">
-                        <span class="card-title black-text" id="countryName">Card Title</span>
+                        <img src="" id="nat-flag">
                     </div>
                     <div class="card-content">
+                        <span class="card-title black-text" id="country-name"></span>
                         <span id="capital"></span>
                         <span id="timeZone"></span>
                         <span id="lang"></span>
@@ -46,6 +46,9 @@
         </div>
     </div>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
+        integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
+        crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="./assets/js/script.js"></script>
 </body>
