FIX: All datapoints in the country data card are now each on a new line

--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
                         <img src="" id="nat-flag">
                     </div>
                     <div class="card-content">
-                        <span class="card-title black-text" id="country-name"></span>
-                        <span id="capital"></span>
-                        <span id="timeZone"></span>
-                        <span id="lang"></span>
-                        <span id="pop"></span>
-                        <span id="currency"></span>
-                        <span id="callCode"></span>
+                        <h5 class="card-title black-text" id="country-name"></h5>
+                        <p id="capital"></p>
+                        <p id="timeZone"></p>
+                        <p id="lang"></p>
+                        <p id="pop"></p>
+                        <p id="currency"></p>
+                        <p id="callCode"></p>
                     </div>
                     <div class="card-action">
                     </div>
