UPDATE: Card prototype in index

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <div class="container">
         <div class="row">
-            <div class="col s6 m4">
+            <!-- <div class="col s6 m4">
                 <div class="card" style="margin-top: 60px" id="country-data">
                     <div class="card-image">
                         <img src="" id="nat-flag">
@@ -39,7 +39,38 @@
                         <p id="currency"></p>
                         <p id="callCode"></p>
                     </div>
-                    <div class="card-action">
+                </div>
+            </div> -->
+
+            <div class="card col sm 4">
+                <div class="card-image waves-effect waves-block waves-light">
+                    <img class="activator" src="https://via.placeholder.com/300x200">
+                </div>
+                <div class="card-content">
+                    <span class="card-title activator grey-text text-darken-4" id="country-name"><i
+                            class="material-icons right">more_vert</i></span>
+                </div>
+                <div class="card-reveal">
+                    <span class="card-title grey-text text-darken-4" id="country-name-inner"><i
+                            class="material-icons right">close</i></span>
+                    <p id="capital"></p>
+                    <p id="timeZone"></p>
+                    <p id="lang"></p>
+                    <p id="pop"></p>
+                    <p id="currency"></p>
+                    <p id="callCode"></p>
+                </div>
+            </div>
+        </div>
+        <div class="row" id="weather-cards">
+            <div class="col s3">
+                <div class="card blue-grey darken-1">
+                    <div class="card-content white-text">
+                        <span class="card-title">11/10/2020</span>
+                        <img src="" alt="">
+                        <p>temp: 90</p>
+                        <p>humidity: 40%</p>
+
                     </div>
                 </div>
             </div>
