UPDATE: Wrote the fetch weather and cardBuilder functions

--- a/index.html
+++ b/index.html
@@ -62,25 +62,14 @@
                 </div>
             </div>
         </div>
-        <div class="row" id="weather-cards">
-            <div class="col s3">
-                <div class="card blue-grey darken-1">
-                    <div class="card-content white-text">
-                        <span class="card-title">11/10/2020</span>
-                        <img src="" alt="">
-                        <p>temp: 90</p>
-                        <p>humidity: 40%</p>
-
-                    </div>
-                </div>
-            </div>
-        </div>
+        <div class="row" id="weather-cards"></div>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
         integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="./assets/js/script.js"></script>
 </body>
 
