--- a/index.html
+++ b/index.html
@@ -25,26 +25,9 @@
 
     <div class="container">
         <div class="row">
-            <!-- <div class="col s6 m4">
-                <div class="card" style="margin-top: 60px" id="country-data">
-                    <div class="card-image">
-                        <img src="" id="nat-flag">
-                    </div>
-                    <div class="card-content">
-                        <h5 class="card-title black-text" id="country-name"></h5>
-                        <p id="capital"></p>
-                        <p id="timeZone"></p>
-                        <p id="lang"></p>
-                        <p id="pop"></p>
-                        <p id="currency"></p>
-                        <p id="callCode"></p>
-                    </div>
-                </div>
-            </div> -->
-
             <div class="card col sm 4">
                 <div class="card-image waves-effect waves-block waves-light">
-                    <img class="activator" src="https://via.placeholder.com/300x200">
+                    <img class="activator"  id ="nat-flag" src="https://via.placeholder.com/300x200">
                 </div>
                 <div class="card-content">
                     <span class="card-title activator grey-text text-darken-4" id="country-name"><i
