--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 <body>
     <nav>
         <div class="nav-wrapper">
-            <form>
+            <form id="search">
                 <div class="input-field">
-                    <input id="search" type="search" required>
+                    <input type="search" id="search-bar" required>
                     <label class="label-icon" for="search"><i class="material-icons">search</i></label>
                     <i class="material-icons">close</i>
                 </div>
