--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
         </div>
     </nav>
 
-    <div class="container">
+    <div class="container" id="main">
         <div class="row">
             <div class="card col sm 4">
                 <div class="card-image waves-effect waves-block waves-light">
-                    <img class="activator"  id ="nat-flag" src="https://via.placeholder.com/300x200">
+                    <img class="activator" id="nat-flag" src="https://via.placeholder.com/300x200">
                 </div>
                 <div class="card-content">
                     <span class="card-title activator grey-text text-darken-4" id="country-name"><i
@@ -45,6 +45,7 @@
                 </div>
             </div>
         </div>
+        <h5 id="capital-city"></h5>
         <div class="row" id="weather-cards"></div>
     </div>
 
