UPDATE: Added instruction panel

--- a/index.html
+++ b/index.html
@@ -23,6 +23,22 @@
         </div>
     </nav>
 
+    <div class="container" id="instructions">
+        <div class="row">
+            <div class="col s0 m3"></div>
+            <div class="col s12 m6">
+                <div class="card-panel teal">
+                    <h4 class="white-text">Instructions:</h4>
+                    <span class="white-text">
+                        <!-- Fill in instructions -->
+                    </span>
+                </div>
+            </div>
+            <div class="col s0 m3"></div>
+        </div>
+    </div>
+
+
     <div class="container" id="main">
         <div class="row">
             <div class="card col sm 4">
