UPDATE: Put weather cards and country card on same line

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     <div class="container" id="main">
         <div class="row">
-            <div class="card col sm 4">
+            <div class="card col sm4">
                 <div class="card-image waves-effect waves-block waves-light">
                     <img class="activator" id="nat-flag" src="https://via.placeholder.com/300x200">
                 </div>
@@ -60,9 +60,14 @@
                     <p id="callCode"></p>
                 </div>
             </div>
+
+            <div class="col sm8" style="margin-left: 10px;">
+                <h5 id="capital-city"></h5>
+                <div class="row" id="weather-cards"></div>
+            </div>
+
         </div>
-        <h5 id="capital-city"></h5>
-        <div class="row" id="weather-cards"></div>
+
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
