UPDATE: created a for loop to run through timezones array as well as added instructional page

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./assets/style/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <title>Hitch-hikers Guide</title>
+    <title>Travel Almanac</title>
 </head>
 
 <body>
@@ -31,6 +31,7 @@
                     <h4 class="white-text">Instructions:</h4>
                     <span class="white-text">
                         <!-- Fill in instructions -->
+                        Welcome to the Travel Almanac. Here you can search any country and learn its capital city, native language, currency, and more. We will also provide you with a 5 day weather forecast so that you may pack accordingly. To begin simply type the country of your liking into the search bar and go. 
                     </span>
                 </div>
             </div>
