UPDATE: Added comments on js funcs, html containers, and css

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+    <!-- This is the nav bar that doubles as a search bar -->
     <nav>
         <div class="nav-wrapper teal">
             <form id="search">
@@ -25,6 +26,7 @@
         </div>
     </nav>
 
+    <!-- This is the instructions container, toggled off once query is entered -->
     <div class="container" id="instructions">
         <div class="row">
             <div class="col s12 m6 offset-m3">
@@ -41,7 +43,7 @@
         </div>
     </div>
 
-
+    <!-- This is the main body container, toggled on upon entry of query -->
     <div class="container" id="main">
         <div class="row">
             <div class="card col push-sm4" style="margin-top: 20px; padding-top: 5px;">
